k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: poisson-confidence-intervals-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: poisson-confidence-intervals-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poisson-confidence-intervals-frontend
  name: poisson-confidence-intervals-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poisson-confidence-intervals-frontend
  template:
    metadata:
      labels:
        app: poisson-confidence-intervals-frontend
    spec:
      containers:
        - image: brojonat/poisson-confidence-intervals-frontend:latest
          imagePullPolicy: Always
          name: poisson-confidence-intervals-frontend
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
